2007-4-21  Stuart Brorson <sdb (AT) cloud9 (DOT) net>
	* src/x_window.c: Modify gattrib so it checks for design changes
	before quitting if user hits delete button on window.  Closes bug
	1704938 from Peter Brett.
	
2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* src/x_fileselect.c:
	 - Set the alternative button order for gtk dialogs 
	   (now with correct responses).
	 - Reverted the changes below. 
	   gtk_dialog_set_alternative_button_order should have the same
	   responses as the dialogs.
	 - Set the alternative button order for gtk dialogs.
	  This would allow to display the correct button order whatever
	  system is running this app. Fix for bug #1553483.
	
2007-04-17 21:16  Dan McMahill <danmc>

	* src/gattrib.c: remove /* within comment

2007-04-17 Peter Clifton <pcjc2@cam.ac.uk>

	Merge changes from noscreen branch

	2007-04-12 Peter Clifton <pcjc2@cam.ac.uk>

		* src/o_attrib.c: Replace incorrect use of world_get_complex_bounds()
		  with world_get_object_list_bounds().

2007-04-17 Peter Clifton <pcjc2@cam.ac.uk>

	* src/gtkitementry_2_2.c: Fixed code left accidentally when
	  removing an obsolete #if 0'd out section.

2007-4-15  Stuart Brorson <sdb (AT) cloud9 (DOT) net>
	* src/*.c:  Added DOxygen style comment pragma to many (but not
	all) .c files.  DOxygenating gattrib is an ongoing project.
	
2007-04-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_string_list.c: Added missing test to prevent a seg fault
	when loading up a schematic with missing attributes.

2007-4-15  Stuart Brorson <sdb (AT) cloud9 (DOT) net>
	* Makefile.am, configure.ac, docs/*: Created new docs
	directory, and set up framework to create doxygen generated
	docs.
	
2007-4-3  Stuart Brorson <sdb@cloud9.net>
	* src/s_sheet_data.c, src/s_table.c, src/s_toplevel.c:
	Temp fix for bug 1692431 -- don't put net= attribute into 
	component attrib table.
	
2007-2-11 Stuart Brorson <sdb@cloud9.net>
	* src/s_toplevel.c: Fixed bug I introduced at code sprint.
	